src/test/ui/parser/removed-syntax-static-fn.stderr
error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `super`, `type`, `unsafe`, or `}`, found keyword `static`
  --> $DIR/removed-syntax-static-fn.rs:4:5
   |
LL | impl S {
   |         - expected one of 11 possible tokens
LL |     static fn f() {}
   |     ^^^^^^ unexpected token

error: aborting due to previous error

