src/test/ui/parser/removed-syntax-static-fn.rs
struct S;

impl S {
    static fn f() {}
    //~^ ERROR expected one of `async`, `const`, `crate`
}

fn main() {}
